--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matt Reimann</title>
   </head>
-  <body>
+  <body class="flex flex-col justify-between min-h-screen overflow-y-scroll overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
