add conditional width

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Matt Reimann</title>
   </head>
   <body class="flex flex-col justify-between min-h-screen overflow-y-scroll overflow-x-hidden">
-    <div id="root"></div>
+    <div id="root" class="md:my-0 md:mx-auto"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
